--- a/_posts/2019-12-28-the-us-narrative-today.html
+++ b/_posts/2019-12-28-the-us-narrative-today.html
@@ -1522,107 +1522,107 @@ stories:
   domain: http://www.uvaldeleadernews.com/
   link: http://uvaldeleadernews.com/top-stories/zeiner-releases-historical-novel-childrens-book/
 images:
-- name: downtown-los-angeles-downtown-la-gan-vogh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-gan-vogh.JPG
-- name: nazi-invasion-downtown-building.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-downtown-building.jpg
-- name: old-door-lock-old-door-lock-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-horiz-circuit.jpg
-- name: bluelake-gan-vogh-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-gan-vogh-file-00-00-00-00.jpg
-- name: old-gas-pumps-oldgaspumps-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purple-pond.jpg
-- name: 35562068104_fa20c57575-udnie.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/35562068104_fa20c57575-udnie.jpg
-- name: aws-s3-dunes-dunes-still-600.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still-600.jpg
-- name: stalin-time-miami-beach-tower-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-miami-beach-tower-city.jpg
-- name: nyc-flag-nycflag-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-yellow-paper.jpg
-- name: copper-circuit-IMG_7559.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7559.jpg
-- name: powerlines-power-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-pablo-blue.jpg
-- name: la-muse-downtown-street-crosswalk.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-downtown-street-crosswalk.jpg
-- name: nazi-invasion-nyc-subway-train-125th.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-nyc-subway-train-125th.jpg
-- name: razorcliff-razorcliff-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-plentiful.jpg
-- name: beach-rocks-beach-rocks-currents-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-copper-circuit.jpg
-- name: crow-crow-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-wols.jpg
-- name: copper-circuit-city-vancouver-clouds.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-city-vancouver-clouds.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-colorful-dream.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-blue-circuit-5.jpg
-- name: trucksilo-trucksilo-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-nazi-poster.jpg
-- name: beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-marcel-duchamp.jpg
-- name: old-door-lock-old-door-lock-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-blue-circuit-5.jpg
-- name: mosaic-face-mosaic-face-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-horiz-circuit.jpg
-- name: eduardo-eduardo-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-gred-mash.jpg
-- name: old-barn-old-barn-1500-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-colorful-blocks.jpg
-- name: christianity-christianity-under-construction-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-sand-paper.jpg
-- name: crow_plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_plentiful.jpg
-- name: legal-statue-legalstatue-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-electricity.jpg
-- name: nazi-invasion-grain-ship-docking-grass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-grain-ship-docking-grass.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-really-hot.jpg
-- name: beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-gan-vogh.jpg
-- name: ellis-island-ellisisland-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-bright-sand.jpg
-- name: oldhouse-oldhouse-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-ww2-color.jpg
-- name: locked-up-steam-lock-up-steam-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smooth-ride.jpg
-- name: razorwire-DSC-0080-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-far-away.jpg
-- name: wind-mills-windmills-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-marcel-duchamp.jpg
-- name: capital-battle-capitolbattle-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-purple-storm.jpg
-- name: amusement-park-amusement-park-2-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-granite.jpg
-- name: razorwire-DSC-0080-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-hot-spicy.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-oily-mcoilface.jpg
-- name: status-berlin-status-berlin-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-graham-sutherland.jpg
-- name: curtain-curtain-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-marcel-duchamp.jpg
-- name: oldbarn-oldbarn-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-alien-goggles.jpg
-- name: san-francisco-street-view-san-francisco-street-view-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-kand-two.jpg
-- name: flower-barbed-wire-flower-barbed-wire-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-really-hot.jpg
-- name: aws-s3-diamondcreek-diamondcreek-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-diamondcreek-diamondcreek-still.jpg
-- name: subway-subway-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-colorful-dream.jpg
-- name: aws-s3-square-file-00-00-35-50-los-angeles-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-35-50-los-angeles-square.jpg
-- name: san-francisco-street-view-san-francisco-street-view-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-pablo-blue.jpg
-- name: old-church-oldchurch-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-yellow-paper.jpg
-- name: amusement-park-amusement-park-2-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-sand-paper.jpg
+- name: old-granary-field-granaryfield-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purple-storm.jpg
+- name: lincoln-memorial-lincolnmemorial-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-storm.jpg
+- name: downtown-trucksilo-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crafty-painting.jpg
+- name: nazi-invasion-docks-big-cosco-ship.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-docks-big-cosco-ship.jpg
+- name: cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-spagetti-accident.jpg
+- name: miamibeach-miamibeach-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-umberto-bocc.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+- name: rain-princess-capital_36728421355_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-capital_36728421355_o.jpg
+- name: nazi-invasion-border-crossing-through-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-border-crossing-through-fence.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-crabapple.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-crabapple.JPG
+- name: flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-colored-circuits.jpg
+- name: nazi-invasion-firetruck-bright-sun.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-firetruck-bright-sun.jpg
+- name: wall-cannon-wall-cannon-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wall-cannon-wall-cannon-dark-dali.jpg
+- name: la-muse-highway-granary_36331800650_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-highway-granary_36331800650_o.jpg
+- name: rockingchair-rockingchair-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-ww2-dresden.jpg
+- name: power-lines-power-lines-empty-space-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-crunch-paper.jpg
+- name: braceros-domingo-ulloa-capital_36728421355_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-capital_36728421355_o.jpg
+- name: berlinwall2-berlinwall-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-nazi-poster.jpg
+- name: white-house-whitehouse-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-mucha-mult.jpg
+- name: amusement-park-amusement-park-2-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-creativity.jpg
+- name: liberty-back-statue-liberty-back-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alien-goggles.jpg
+- name: gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-cinnamon-rolls.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sunday.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-bright-sand.jpg
+- name: carry-load-carryload-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-satan-red.jpg
+- name: border-crossing-bordercrossing-far-away.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-far-away.png
+- name: machine-road-machine-road-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-internet-numbers.jpg
+- name: border-fence-border-fence-on-hill-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-sand-paper.jpg
+- name: copper-circuit-train-station-cloud.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-station-cloud.jpg
+- name: braceros-domingo-ulloa-face-eyes-open-statue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-face-eyes-open-statue.jpg
+- name: stalin-time-border-crossing-through-fence-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-border-crossing-through-fence-2.jpg
+- name: server-cloud-server-racks-clouds-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-dali-two.jpg
+- name: old-granary-field-granaryfield-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-granite.jpg
+- name: oldhouse-oldhouse-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-internet-numbers.jpg
+- name: oldhouse-granaryfield-monet-one.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-monet-one.jpg
+- name: paris-paris-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-umberto-bocc.jpg
+- name: razorcliff-razorcliff-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-diego-rivera1.jpg
+- name: oldhousecars-house-old-cars-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-clean-view.jpg
+- name: subway-subway-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-light-dali.jpg
+- name: machine-road-machine-road-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-purp-paper.jpg
+- name: aws-s3-stories-mosaic-face-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-mosaic-face-blue-circuit.jpg
+- name: fence-fence-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-crafty-painting.jpg
+- name: cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-hot-spicy.jpg
+- name: oldhouse-oldhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-colored-circuits.jpg
+- name: white-house-lawn-white-house-window-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-umberto-bocc.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-spagetti-accident.jpg
+- name: store-on-corner-store-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-nazi-poster.jpg
+- name: christianity-christianity-under-construction-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-spagetti-accident.jpg
+- name: old-granary-field-oldhouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-blocks.jpg
+- name: bordercrossing-bordercrossing-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-smooth-ride.jpg
+- name: walled-garden-walled-garden-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-collage.jpg
 ---
 Tribal Council Acts On Tiny Homes, School Security, Drug Prevention.&nbsp;Hong Kong Protesters Demand Mainland Chinese Traders Leave.&nbsp;United Nations Human Rights Interview.&nbsp;Video Of The Week.&nbsp;Spicy Korean Seafood Noodle Soup At Kang Nam.&nbsp;Emma Watson Compares Taylor Swift To Little Women's Jo March.&nbsp;Recalling State's Worst Environmental Disaster.&nbsp;Lady Trojans Cross Country Team Runs To Programs 15th State Championship.&nbsp;
